# protty

./: .gitignore  LICENSE  README.md  pyproject.toml
protty/: clustalo.py  merops.py  protty_build.py  protty_scan.py  wrappers.py
protty/core/: merops.py  wrappers.py
protty/scripts/: build.py  scan.py
