[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protty"
version = "0.0.42"
description = "Protty: A pretty simple tool for protease prediction"
readme = "README.md"
authors = [{name = "Artem Fatkulin", email = "artem42fatkulin@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "biopython",
    "pyhmmer",
    "rich"
]

[project.scripts]
protty-build = "protty.scripts.build:main"
protty-scan = "protty.scripts.scan:main"

[tool.ruff.format]
quote-style = "single"
